Fix build problem
Signed-off-by: Brian Cragun <cragun@us.ibm.com>